--- a/code/nuxt_study/package.json
+++ b/code/nuxt_study/package.json
@@ -12,5 +12,9 @@
   "dependencies": {
     "nuxt": "^3.13.0",
     "vue": "latest"
+  },
+  "devDependencies": {
+    "@element-plus/nuxt": "^1.0.10",
+    "sass": "^1.77.8"
   }
 }
